tcl/corpus/comments.txt
===
Full line comment
===

# This command prints "Hello, world!"
puts "Hello, world!"

---

(source_file
 (comment)
 (command
  name: (word)
  arguments: (word_list
              (quoted_word))))

===
A comment inside command substitution
===

set a [# test]
expr 2+2]

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (word)
              (command_substitution
               (comment)
               (command
                name: (word)
                arguments: (word_list
                            (word)))))))
