tcl/corpus/words.txt
===
Simple word
===

x

---

(source_file
 (command
  name: (word)))

===
Two words
===

a b

---

(source_file
 (command
  name: (word)
  arguments: (word_list (word))))

===
Substitution + word content
===

$a-test

---

(source_file
 (command
  name: (concatenation
         (variable_substitution)
         (word))))

===
Word content + variable substitution
===

test-$a

---

(source_file
 (command
  name: (concatenation
         (word)
         (variable_substitution))))

===
Substitution + space
===

$a $b

---

(source_file
 (command
  name: (variable_substitution)
  arguments: (word_list
              (variable_substitution))))

===
Simple string word
===

puts "Hello, world!"

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (quoted_word))))

===
String word with variable substitution
===

puts "Hello, $name!"

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (quoted_word (variable_substitution)))))

===
Braced word
===

puts {expr 2+2}

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (braced_word
               (word)
               (word)))))

===
Braced word with only left brace inside
===

puts {expr 2+2{}

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (braced_word
               (word)
               (word)
               (ERROR)))))

===
Braced word with only right brace inside
===

puts {expr 2+2}}

---

(source_file
 (command
  name: (word)
  arguments: (word_list
              (braced_word
               (word)
               (word))))
 (ERROR))
